# olimar

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: raspberry-pi-node_setup.md  test-manager.drawio
scripts/: container_runner_example.py  demo_file_extract.py  demo_get_nodes.py  demo_job.py  demo_job_manager.py  demo_kubernetes_job.py  demo_node_client.py  demo_parallel_jobs.py  demo_test_runner.py  kubernetes_test.py  node_client.py  remote_docker.py  run.bat
src/olimar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/olimar/file_transfer/: file_transfer.py
src/olimar/internal/docker/: container_runner.py  remote_container.py
src/olimar/internal/grpc/proto/: test_runner_service.proto
src/olimar/job/: artifact.py  image.py  job.py  job_command.py  job_config.py  job_manager.py  job_result.py
src/olimar/logger/: __init__.py  builder.py
src/olimar/manager/node_client/: artifact.py  client.py  grpc_client.py
src/olimar/manager/runner/: result.py  runner_base.py
src/olimar/node/: __main__.py  node.py
src/olimar/test/: pytest_test.py  test_manager.py  test_result.py  test_run_config.py  test_runner.py
src/olimar/test/test_runner/: __init__.py  test_runner_pytest.py
src/olimar/util/: config.py  logger.py  waitable.py
